test CI 52.3 on tox

--- a/tox.ini
+++ b/tox.ini
@@ -23,9 +23,9 @@ basepython =
     {py36}: {env:TOXPYTHON:python3.6}
     {py37,docs}: {env:TOXPYTHON:python3.7}
     {py38}: {env:TOXPYTHON:python3.8}
-    {build,prreqs,lint,radon,safety}: {env:TOXPYTHON:python3}
+    {build,pr}: {env:TOXPYTHON:python3}
 passenv = *
-#deps = -r{toxinidir}/cirequirements.txt
+deps = -r{toxinidir}/requirements.txt
 
 # configures the unittest environment for python 3.6
 [testenv:py36]
@@ -48,7 +48,7 @@ commands_pre =
 commands =
     pytest --cov --cov-report=term-missing --cov-append --cov-config=.coveragerc -vv --hypothesis-show-statistics {posargs}
 # after executing the pytest assembles the coverage reports
-commands_post = 
+commands_post =
     coverage report
     coverage html
     coverage xml
@@ -87,53 +87,34 @@ skip_install = true
 commands =
     flake8 {posargs:src tests setup.py docs}
     isort --verbose --check-only --diff src tests setup.py
+    radon cc -s --total-average --no-assert -nb src/
+    radon mi -m -s src/
 
-# confirms changelog was updated after new code additions
-# see .bumpversion.cfg and documentation
-# https://python-project-skeleton.readthedocs.io/en/latest/contributing.html#update-changelog
-[testenv:prreqs]
+[testenv:radon]
+deps = radon
 skip_install = true
-commands = python {toxinidir}/devtools/check_changelog.py
+commands =
+    radon cc -s --total-average --no-assert -nb src/
+    radon mi -m -s src/
 
-# asserts package build integrity
+# safety checks
+[testenv:safety]
+deps = safety
+skip_install = true
+commands = safety check
+
 [testenv:build]
 # setenv here integrates with commit message in .bumpversion.cfg
 # we can tests bump2version with an actual commit
 setenv =
     COMMIT_MSG = Test commit message
-# dependencies needed for code quality checks
-# you need to add here any additional dependencies you might need
-deps =
-    setuptools
-    wheel
-    twine
-    docutils
-    check-manifest
-    readme-renderer
-    bump2version
+deps = -r{toxinidir}/.ci/requirements_release.txt
+
 skip_install = true
-commands_pre = python {toxinidir}/devtools/clean_dist_check.py
 commands =
     python --version
-    # deprecated
-    # python setup.py check --strict --metadata --restructuredtext
-    python setup.py sdist bdist_wheel
-    twine check dist/*.whl
-    twine check dist/*.tar.gz
-    check-manifest {toxinidir}
-    bump2version --dry-run --verbose --allow-dirty patch
-    bump2version --dry-run --verbose --allow-dirty minor
-    bump2version --dry-run --verbose --allow-dirty major
-commands_post = python {toxinidir}/devtools/clean_dist_check.py
-
-# code quality assessment. This is not a check in the CI, serves just
-# as info for the developer
-[testenv:radon]
-deps = radon
-skip_install = true
-commands = 
-    radon cc -s --total-average --no-assert -nb src/
-    radon mi -m -s src/
+    pybabel compile -d locales
+    bump2version build --allow-dirty
 
 # Simulate docs building as it will occur on ReadTheDocs
 # if this fails, most likely RTD build will fail
@@ -145,18 +126,13 @@ commands =
     sphinx-build {posargs:-E} -b html docs/rst dist/docs
     #sphinx-build -b linkcheck docs dist/docs
 
-# safety checks
-[testenv:safety]
-deps = safety
-skip_install = true
-commands = safety check
 
 # my favourite configuration for flake8 styling
 # https://flake8.pycqa.org/en/latest/#
 [flake8]
 max_line_length = 80
 hang-closing = true
-ignore = 
+ignore =
     W293
     W503
     D412
@@ -182,7 +158,7 @@ sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = sampleproject
 # you should add here your known thirdparties, it will facilitate
 # the job to isort
-known_third_party = 
+known_third_party =
     hypothesis
     matplotlib
     numpy
