test CI 52.4 on tox

--- a/tox.ini
+++ b/tox.ini
@@ -121,7 +121,7 @@ commands =
 [testenv:docs]
 usedevelop = true
 deps =
-    -r{toxinidir}/devtools/docs_requirements.txt
+    -r{toxinidir}/.ci/requirements_docs.txt
 commands =
     sphinx-build {posargs:-E} -b html docs/rst dist/docs
     #sphinx-build -b linkcheck docs dist/docs
