--- a/tox.ini
+++ b/tox.ini
@@ -85,10 +85,12 @@ deps =
     git+git://github.com/timothycrosley/isort.git
 skip_install = true
 commands =
-    flake8 {posargs:src tests setup.py docs}
-    isort --verbose --check-only --diff src tests setup.py
-    radon cc -s --total-average --no-assert -nb src/
-    radon mi -m -s src/
+    flake8 {posargs:pidroidbot_discord tests docs}
+    isort --verbose --check-only --diff pidroidbot_discord tests
+    radon cc -s --total-average --no-assert -nb pidroidbot_discord/
+    radon mi -m -s pidroidbot_discord/
+#    flake8 {posargs:src tests setup.py docs}
+#    isort --verbose --check-only --diff pidroidbot_discord tests setup.py
 
 [testenv:radon]
 deps = radon
