test CI 52.8 on tox

--- a/tox.ini
+++ b/tox.ini
@@ -85,12 +85,10 @@ deps =
     git+git://github.com/timothycrosley/isort.git
 skip_install = true
 commands =
-    flake8 {posargs:pidroidbot_discord tests docs}
-    isort --verbose --check-only --diff pidroidbot_discord tests
+    flake8 {posargs:pidroidbot_discord tests setup.py docs}
+    isort --verbose --check-only --diff pidroidbot_discord tests setup.py
     radon cc -s --total-average --no-assert -nb pidroidbot_discord/
     radon mi -m -s pidroidbot_discord/
-#    flake8 {posargs:src tests setup.py docs}
-#    isort --verbose --check-only --diff pidroidbot_discord tests setup.py
 
 [testenv:radon]
 deps = radon
@@ -125,7 +123,8 @@ usedevelop = true
 deps =
     -r{toxinidir}/.ci/requirements_docs.txt
 commands =
-    sphinx-build {posargs:-E} -b html docs/rst dist/docs
+    sphinx-build {posargs:-E} -b html docs/ docs/_build/html/
+    #sphinx-build {posargs:-E} -b html docs/rst dist/docs
     #sphinx-build -b linkcheck docs dist/docs
 
 
