--- a/.github/workflows/ci-lint.yml
+++ b/.github/workflows/ci-lint.yml
@@ -1,7 +1,7 @@
 # Lint tests run on PR
 # but should not run after push to master because reporting
 # these after push is meaningless to the building of the package
-name: lint
+name: Lint
 
 on:
   pull_request:
@@ -9,6 +9,7 @@ on:
 
 jobs:
   build:
+    name: Lint
     runs-on: ${{ matrix.platform }}
     strategy:
       matrix:
