test CI 52.13 on tox

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,8 @@ basepython =
     {py36}: {env:TOXPYTHON:python3.6}
     {py37,docs}: {env:TOXPYTHON:python3.7}
     {py38}: {env:TOXPYTHON:python3.8}
-    {build,pr}: {env:TOXPYTHON:python3}
+    {build,pr,lint,safety}: {env:TOXPYTHON:python3}
+
 passenv = *
 deps = -r{toxinidir}/requirements.txt
 
@@ -87,15 +88,13 @@ skip_install = true
 commands =
     flake8 {posargs:pidroidbot_discord tests setup.py docs}
     isort --verbose --check-only --diff pidroidbot_discord tests setup.py
-    radon cc -s --total-average --no-assert -nb pidroidbot_discord/
-    radon mi -m -s pidroidbot_discord/
 
 [testenv:radon]
 deps = radon
 skip_install = true
 commands =
-    radon cc -s --total-average --no-assert -nb src/
-    radon mi -m -s src/
+    radon cc -s --total-average --no-assert -nb pidroidbot_discord/
+    radon mi -m -s pidroidbot_discord/
 
 # safety checks
 [testenv:safety]
