--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ basepython =
     {py36}: {env:TOXPYTHON:python3.6}
     {py37,docs}: {env:TOXPYTHON:python3.7}
     {py38}: {env:TOXPYTHON:python3.8}
-    {build,pr,lint,safety}: {env:TOXPYTHON:python3}
+    {build,pr,lint,radon,safety}: {env:TOXPYTHON:python3}
 
 passenv = *
 deps = -r{toxinidir}/requirements.txt
