test CI 52.15 on tox

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -1,11 +1,8 @@
 ---
-name: Pull Request Requirements
+name: Documentations
 
 on:
   pull_request:
-    branches:
-      - pouet
-#      - main
 
 jobs:
   i18nCoverage:
