--- a/.github/workflows/ci-lint.yml
+++ b/.github/workflows/ci-lint.yml
@@ -10,24 +10,22 @@ on:
 jobs:
   build:
     name: Lint
-    runs-on: ${{ matrix.platform }}
-    strategy:
-      matrix:
-        platform: [ubuntu-latest]
-        python-version: [3.8]
-
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.x
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.x"
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
         pip install virtualenv tox tox-gh-actions
 
-    - name: Test Lint
-      run: tox -e lint,radon
+    - name: Lint
+      run: tox -e lint
+
+    - name: Radon
+      run: tox -e radon
