test CI 52.16 on tox

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -8,6 +8,11 @@ on:
       - dev
       - test
       - tox
+  pull_request:
+    branches:
+      - main
+      - dev
+      - test
 
 jobs:
   test:
