test CI 52.18 on tox

--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -9,6 +9,11 @@ on:
 #      - dev
 #      - test
 
+#echo "::group::My title"
+#echo "Inside group"
+#echo "::endgroup::"
+
+
 jobs:
   test:
     name: Test
