--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -19,6 +19,12 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           translations-path: 'locales/**/LC_MESSAGES/*.po'
 
+  i18nDocsCoverage:
+    name: Check i18n Documentation Coverage
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
       - name: Check i18n coverage Documentation
         id: i18nCoverageDoc
         uses: alexkiro/i18n-coverage@v1.0.1
