--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -10,7 +10,7 @@ on:
       - tox
 
 jobs:
-  test:
+  ci-test:
     name: Test
     runs-on: ${{ matrix.platform }}
     strategy:
@@ -30,8 +30,12 @@ jobs:
 
       - name: Install dependencies
         run: |
+          echo "::group::Pip install"
           python -m pip install --upgrade pip setuptools wheel
+          echo "::endgroup::"
+          echo "::group::install coverage[toml] virtualenv tox tox-gh-actions"
           pip install coverage[toml] virtualenv tox tox-gh-actions
+          echo "::endgroup::"
 
       - name: Test with tox
         run: tox
