--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -15,45 +15,16 @@ on:
 
 
 jobs:
-  test:
-    name: Test
-    runs-on: ${{ matrix.platform }}
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8]
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install coverage[toml] virtualenv tox tox-gh-actions
-
-      - name: Test with tox
-        run: tox
-
-      - name: "Upload coverage to Codecov"
-        uses: codecov/codecov-action@v1
-        with:
-          verbose: true
-          files: ./coverage.xml
-          fail_ci_if_error: true
-
 
   new_release:
     runs-on: ubuntu-latest
 #    if: "!startsWith(github.event.head_commit.message, '[SKIP]')"
     if: "1 == 0"
     name: New Release
-    needs: Test
-
+    needs:
+      - ci-test
+      - ci-lint
+      - ci-i18n
 
     steps:
       - name: checkout
@@ -206,8 +177,10 @@ jobs:
           LAST_TAG: ${{ env.LAST_TAG }}
           NEW_VERSION: ${{ env.NEW_VERSION }}
         run: |
+          echo "::group::install Ruby and github_changelog_generator"
           sudo apt-get install ruby-full
           sudo gem install github_changelog_generator
+          echo "::endgroup::"
           echo "INFO > Last tag : $LAST_TAG, new version : $NEW_VERSION"
           github_changelog_generator --future-release "v${NEW_VERSION}" --token "${{ secrets.GITHUB_TOKEN }}"
           cp CHANGELOG.md docs/autogen/CHANGELOG.md
