--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -1,13 +1,11 @@
 ---
-name: Pull Request Requirements
+name: Documentations
 
 on:
   pull_request:
-    branches:
-      - main
 
 jobs:
-  i18nCoverage:
+  ci-i18n:
     name: Check i18n Coverage
     runs-on: ubuntu-latest
 
@@ -27,3 +25,4 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
+
