--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -14,12 +14,13 @@ on:
 #echo "::endgroup::"
 
 
+
 jobs:
 
   new_release:
     runs-on: ubuntu-latest
-#    if: "!startsWith(github.event.head_commit.message, '[SKIP]')"
-    if: "1 == 0"
+    if: "!startsWith(github.event.head_commit.message, '[SKIP]')"
+#    if: "1 == 0"
     name: New Release
     needs:
       - ci-test
@@ -54,17 +55,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r .ci/requirements_release.txt
-
-#      - name: Generate coverage report
-#        run: |
-#          pytest --cov=./ --cov-report=xml
-#
-#      - name: "Upload coverage to Codecov"
-#        uses: codecov/codecov-action@v1
-#        with:
-#          verbose: true
-#          files: ./coverage.xml
-#          fail_ci_if_error: true
 
       - name: Generate base.pot
         run: pybabel extract -o locales/base.pot pidroidbot_discord/
