test CI 53.3 on tox

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -2,12 +2,13 @@
 name: Test CI
 
 on:
-  push:
-    branches:
-      - main
-      - dev
-      - test
-      - tox
+  pull_request:
+#  push:
+#    branches:
+#      - main
+#      - dev
+#      - test
+#      - tox
 
 jobs:
   ci-test:
