test CI 53.4 on tox

--- a/.github/workflows/ci-lint.yml
+++ b/.github/workflows/ci-lint.yml
@@ -11,6 +11,8 @@ jobs:
   ci-lint:
     name: Lint
     runs-on: ubuntu-latest
+    outputs:
+      pouet: "toto"
     steps:
     - uses: actions/checkout@v2
 
