--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -16,10 +16,10 @@ jobs:
     runs-on: ${{ matrix.platform }}
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8]
-#        platform: [ubuntu-latest]
-#        python-version: [3.7]
+#        platform: [ubuntu-latest, macos-latest, windows-latest]
+#        python-version: [3.6, 3.7, 3.8]
+        platform: [ubuntu-latest]
+        python-version: [3.7]
     steps:
       - name: checkout
         uses: actions/checkout@v2
