test CI 53.9 on tox

--- a/tox.ini
+++ b/tox.ini
@@ -122,7 +122,8 @@ usedevelop = true
 deps =
     -r{toxinidir}/.ci/requirements_docs.txt
 commands =
-    current_version="test" sphinx-build {posargs:-E} -b html docs/ docs/_build/html/
+    export current_version="test"
+    sphinx-build {posargs:-E} -b html docs/ docs/_build/html/
     #sphinx-build {posargs:-E} -b html docs/rst dist/docs
     #sphinx-build -b linkcheck docs dist/docs
 
