test CI 53.10 on tox

--- a/tox.ini
+++ b/tox.ini
@@ -121,8 +121,9 @@ commands =
 usedevelop = true
 deps =
     -r{toxinidir}/.ci/requirements_docs.txt
+setenv =
+    current_version="test"
 commands =
-    export current_version="test"
     sphinx-build {posargs:-E} -b html docs/ docs/_build/html/
     #sphinx-build {posargs:-E} -b html docs/rst dist/docs
     #sphinx-build -b linkcheck docs dist/docs
