--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -1,28 +1,42 @@
 ---
-name: Documentations
+name: Test i18n
 
 on:
   pull_request:
 
 jobs:
-  ci-i18n:
-    name: Check i18n Coverage
+  test-i18n:
     runs-on: ubuntu-latest
-
+    name: Test i18n
     steps:
       - uses: actions/checkout@v2
 
-      - name: Check i18n coverage
-        id: i18nCoverage
-        uses: alexkiro/i18n-coverage@v1.0.0
+      - name: Set up Python 3
+        uses: actions/setup-python@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          translations-path: 'locales/**/LC_MESSAGES/*.po'
+          python-version: '3.x'
 
-      - name: Check i18n coverage Documentation
-        id: i18nCoverageDoc
-        uses: alexkiro/i18n-coverage@v1.0.1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r .ci/requirements_docs.txt
+          pip install -r .ci/requirements_release.txt
+
+      - name: Execute script to build our documentation and update pages
+        run: "bash .ci/check_i18n.sh"
+
+#      - name: Check i18n coverage
+#        id: i18nCoverage
+#        uses: alexkiro/i18n-coverage@v1.0.0
+#        with:
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          translations-path: 'locales/**/LC_MESSAGES/*.po'
+#
+#      - name: Check i18n coverage Documentation
+#        id: i18nCoverageDoc
+#        uses: alexkiro/i18n-coverage@v1.0.1
+#        with:
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
 
