--- a/.github/workflows/ci-lint.yml
+++ b/.github/workflows/ci-lint.yml
@@ -1,16 +1,15 @@
 # Lint tests run on PR
 # but should not run after push to master because reporting
 # these after push is meaningless to the building of the package
-name: Lint
+name: Test Lint
 
 on:
   pull_request:
 
-
 jobs:
-  ci-lint:
-    name: Lint
+  test-lint:
     runs-on: ubuntu-latest
+    name: Test Lint
     steps:
     - uses: actions/checkout@v2
 
