--- a/tox.ini
+++ b/tox.ini
@@ -121,6 +121,8 @@ commands =
 usedevelop = true
 deps =
     -r{toxinidir}/.ci/requirements_docs.txt
+setenv =
+    current_version="test"
 commands =
     sphinx-build {posargs:-E} -b html docs/ docs/_build/html/
     #sphinx-build {posargs:-E} -b html docs/rst dist/docs
