test CI 55 main

--- a/tox.ini
+++ b/tox.ini
@@ -82,11 +82,13 @@ deps =
     flake8>=3
     flake8-docstrings
     flake8-bugbear
+    black
     pygments
     git+git://github.com/timothycrosley/isort.git
 skip_install = true
 commands =
-    flake8 {posargs:pidroidbot_discord tests setup.py docs}
+    black --check --diff pidroidbot_discord tests setup.py
+    flake8 pidroidbot_discord tests setup.py docs
     isort --verbose --check-only --diff pidroidbot_discord tests setup.py
 
 [testenv:radon]
@@ -132,13 +134,14 @@ commands =
 # my favourite configuration for flake8 styling
 # https://flake8.pycqa.org/en/latest/#
 [flake8]
-max_line_length = 80
+max_line_length = 88
 hang-closing = true
 ignore =
     W293
     W503
     D412
     D105
+    E133
 per-file-ignores = setup.py:E501
 docstring-convention = numpy
 # normally I exclude init because it is very hard to configure init
@@ -149,22 +152,33 @@ exclude = src/sampleproject/__init__.py
 # https://github.com/timothycrosley/isort
 [isort]
 skip = __init__.py
-line_length = 80
+line_length = 88
 indent = 4
+profile = "black"
 multi_line_output = 8
 include_trailing_comma = true
 lines_after_imports = 2
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+no_lines_before=LOCALFOLDER
 #known_future_library=future,pies
 #known_standard_library=std,std2
-known_first_party = sampleproject
+known_first_party = pidroidbot_discord
 # you should add here your known thirdparties, it will facilitate
 # the job to isort
 known_third_party =
+    discord
     hypothesis
     matplotlib
     numpy
     pytest
+import_heading_stdlib=Standard Library
+import_heading_future=Future
+import_heading_thirdparty=Third Party
+import_heading_firstparty=Project
+
+[black]
+line-length = 88
+skip-string-normalization = true
 
 [tool:pytest]
 # If a pytest section is found in one of the possible config files
