--- a/.github/workflows/ci-lint.yml
+++ b/.github/workflows/ci-lint.yml
@@ -1,4 +1,4 @@
-# Lint tests run on PR
+# Lint test run on PR
 # but should not run after push to master because reporting
 # these after push is meaningless to the building of the package
 name: Test Lint
