--- a/tox.ini
+++ b/tox.ini
@@ -151,11 +151,11 @@ exclude = src/sampleproject/__init__.py
 # configuration for the isort module
 # https://github.com/timothycrosley/isort
 [isort]
-skip = __init__.py
+skip="__init__.py"
 line_length = 88
 indent = 4
-profile = "black"
-multi_line_output = 8
+profile = black
+multi_line_output = 3
 include_trailing_comma = true
 lines_after_imports = 2
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
@@ -175,10 +175,7 @@ import_heading_stdlib=Standard Library
 import_heading_future=Future
 import_heading_thirdparty=Third Party
 import_heading_firstparty=Project
-
-[black]
-line-length = 88
-skip-string-normalization = true
+import_heading_localfolder=Local Folder
 
 [tool:pytest]
 # If a pytest section is found in one of the possible config files
