test CI 60.1 on tox

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps = -r{toxinidir}/requirements.txt
 # configures the unittest environment for python 3.6
 [testenv:py36]
 setenv =
-    PYTHONPATH={toxinidir}/tests
+    PYTHONPATH={toxinidir}/test
     PYTHONUNBUFFERED=yes
 user_develop = false
 # installs dependencies we need for testing
@@ -87,9 +87,9 @@ deps =
     git+git://github.com/timothycrosley/isort.git
 skip_install = true
 commands =
-    black --check --diff pidroidbot_discord tests setup.py
-    flake8 pidroidbot_discord tests setup.py docs
-    isort --verbose --check-only --diff pidroidbot_discord tests setup.py
+    black --check --diff pidroidbot_discord test setup.py
+    flake8 pidroidbot_discord test setup.py docs
+    isort --verbose --check-only --diff pidroidbot_discord test setup.py
 
 [testenv:radon]
 deps = radon
@@ -196,5 +196,5 @@ python_files =
 #    --doctest-glob=\*.rst
 #    --tb=short
 testpaths =
-    tests
+    test
 
