test CI 60.2 on tox

--- a/tox.ini
+++ b/tox.ini
@@ -87,9 +87,9 @@ deps =
     git+git://github.com/timothycrosley/isort.git
 skip_install = true
 commands =
-    black --check --diff pidroidbot_discord test setup.py
+    black --check --diff pidroidbot_discord test setup.py docs
+    isort --verbose --check-only --diff pidroidbot_discord test setup.py docs
     flake8 pidroidbot_discord test setup.py docs
-    isort --verbose --check-only --diff pidroidbot_discord test setup.py
 
 [testenv:radon]
 deps = radon
