--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -13,6 +13,10 @@ replace = __version__ = "{new_version}"
 search = release = "v{current_version}"
 replace = release = "v{new_version}"
 
+[bumpversion:file:Dockerfile]
+search = version="v{current_version}"
+replace = version="v{new_version}"
+
 [bumpversion:file:README.rst]
 search = v{current_version}
 replace = v{new_version}
