CI and Tox and Lint ok (#43)
* test CI 60 on tox

* test CI 60.1 on tox

* test CI 60.2 on tox

* test CI 60.2 on tox

* test CI 60.3 on tox

Co-authored-by: PiDroid-B <pidroid-b@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps = -r{toxinidir}/requirements.txt
 # configures the unittest environment for python 3.6
 [testenv:py36]
 setenv =
-    PYTHONPATH={toxinidir}/tests
+    PYTHONPATH={toxinidir}/test
     PYTHONUNBUFFERED=yes
 user_develop = false
 # installs dependencies we need for testing
@@ -87,9 +87,9 @@ deps =
     git+git://github.com/timothycrosley/isort.git
 skip_install = true
 commands =
-    black --check --diff pidroidbot_discord tests setup.py
-    flake8 pidroidbot_discord tests setup.py docs
-    isort --verbose --check-only --diff pidroidbot_discord tests setup.py
+    black --check --diff pidroidbot_discord test setup.py docs
+    isort --verbose --check-only --diff pidroidbot_discord test setup.py docs
+    flake8 pidroidbot_discord test setup.py docs
 
 [testenv:radon]
 deps = radon
@@ -151,11 +151,11 @@ exclude = src/sampleproject/__init__.py
 # configuration for the isort module
 # https://github.com/timothycrosley/isort
 [isort]
-skip = __init__.py
+skip="__init__.py"
 line_length = 88
 indent = 4
-profile = "black"
-multi_line_output = 8
+profile = black
+multi_line_output = 3
 include_trailing_comma = true
 lines_after_imports = 2
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
@@ -175,10 +175,7 @@ import_heading_stdlib=Standard Library
 import_heading_future=Future
 import_heading_thirdparty=Third Party
 import_heading_firstparty=Project
-
-[black]
-line-length = 88
-skip-string-normalization = true
+import_heading_localfolder=Local Folder
 
 [tool:pytest]
 # If a pytest section is found in one of the possible config files
@@ -199,5 +196,5 @@ python_files =
 #    --doctest-glob=\*.rst
 #    --tb=short
 testpaths =
-    tests
+    test
 
