--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -10,13 +10,13 @@ search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [bumpversion:file:docs/conf.py]
-search = release = "v{current_version}"
-replace = release = "v{new_version}"
+search = release = "{current_version}"
+replace = release = "{new_version}"
 
 [bumpversion:file:Dockerfile]
-search = version="v{current_version}"
-replace = version="v{new_version}"
+search = version="{current_version}"
+replace = version="{new_version}"
 
 [bumpversion:file:README.rst]
-search = v{current_version}
-replace = v{new_version}
+search = {current_version}
+replace = {new_version}
