--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,8 @@
 [bumpversion]
-current_version = 0.0.67.rc_0
+current_version = 0.0.67.rc0
 parse = (?P<major>\d+).(?P<minor>\d+).?((?P<patch>\d+))?(\.(?P<branch>\w+)_(?P<build>\d+))?
 serialize = 
-	{major}.{minor}.{patch}.{branch}_{build}
+	{major}.{minor}.{patch}.{branch}{build}
 	{major}.{minor}.{patch}
 
 [bumpversion:file:pidroidbot_discord/__init__.py]
