--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 current_version = 0.0.67.rc0
-parse = (?P<major>\d+).(?P<minor>\d+).?((?P<patch>\d+))?(\.(?P<branch>\w+)_(?P<build>\d+))?
+parse = (?P<major>\d+).(?P<minor>\d+).?((?P<patch>\d+))?(\.(?P<branch>\w+)(?P<build>\d+))?
 serialize = 
 	{major}.{minor}.{patch}.{branch}{build}
 	{major}.{minor}.{patch}
