[MAJOR] First RC (#46)
* codacy : Docker + ignore list + README(add docker badge)

* [SKIP] version bump v0.0.67 -> v0.0.67.dev_0

* codacy

* [SKIP] version bump v0.0.67.dev_0 -> v0.0.67.dev_1

* codacy 1

* [SKIP] version bump v0.0.67.dev_1 -> v0.0.67.dev_2

* codacy 2

* [SKIP] version bump v0.0.67.dev_2 -> v0.0.67.dev_3

* Dockerfile+entrypoint

* bumpversion new format

* bumpversion new format

* force

* Version bump 0.0.67 -> 0.0.67.beta_0

* version managemnet

* update i18n script

* [FEATURE] new versionning system

* [FEATURE] new versionning system (fix)

Co-authored-by: PiDroid-B <pidroid-b@users.noreply.github.com>

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,8 @@
 [bumpversion]
-current_version = 0.0.67
-parse = (?P<major>\d+).(?P<minor>\d+).?((?P<patch>\d+))?(\.(?P<branch>\w+)_(?P<build>\d+))?
+current_version = 0.0.67.rc0
+parse = (?P<major>\d+).(?P<minor>\d+).?((?P<patch>\d+))?(\.(?P<branch>\w+)(?P<build>\d+))?
 serialize = 
-	{major}.{minor}.{patch}.{branch}_{build}
+	{major}.{minor}.{patch}.{branch}{build}
 	{major}.{minor}.{patch}
 
 [bumpversion:file:pidroidbot_discord/__init__.py]
@@ -10,13 +10,13 @@ search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [bumpversion:file:docs/conf.py]
-search = release = "v{current_version}"
-replace = release = "v{new_version}"
+search = release = "{current_version}"
+replace = release = "{new_version}"
 
 [bumpversion:file:Dockerfile]
-search = version="v{current_version}"
-replace = version="v{new_version}"
+search = version="{current_version}"
+replace = version="{new_version}"
 
 [bumpversion:file:README.rst]
-search = v{current_version}
-replace = v{new_version}
+search = {current_version}
+replace = {new_version}
