--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,7 @@ updates:
   - package-ecosystem: "pip"
     # Look for a requirements.txt in the root directory
     directory: "/.ci/dependabot/"
+    versioning-strategy: lockfile-only
     schedule:
       interval: "daily"
 
