--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -40,6 +40,16 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.AC_GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git checkout "${GITHUB_REF:11}"
 
+      - name: Change branch for dev or test
+        env:
+          BRANCH: ${{ env.BRANCH }}
+        run: |
+          rm -rf .git/
+          git init
+          git remote add deploy "https://token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+          git checkout -b "${BRANCH}-output"
+        if: "env.BRANCH == 'dev' || env.BRANCH == 'test'"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -162,14 +172,21 @@ jobs:
           echo "::endgroup::"
           echo "INFO > Last tag : $LAST_TAG, new version : $NEW_VERSION"
           github_changelog_generator --future-release "${NEW_VERSION}" --token "${{ secrets.GITHUB_TOKEN }}"
-          cp CHANGELOG.md docs/autogen/CHANGELOG.md
+          cp CHANGELOG.md docs/_autogen/CHANGELOG.md
           github_changelog_generator --future-release "${NEW_VERSION}" --token "${{ secrets.GITHUB_TOKEN }}" --since-tag "$LAST_TAG" -o .ci/CHANGELOG.md
 
-      - name: Commit version
+      - name: Commit version and push
+        env:
+          BRANCH: ${{ env.BRANCH }}
         run: |
           git add .
           git commit -m "Version bump ${{ env.OLD_VERSION }} -> ${{ env.NEW_VERSION }}"
-          git push
+
+          if [ "${BRANCH}" == "dev" ] || [ "${BRANCH}" == "test" ]; then
+            git push deploy gh-pages --force
+          else
+            git push
+          fi
 
       - name: Create tag and release (only on main)
         run: |
