--- a/tox.ini
+++ b/tox.ini
@@ -142,11 +142,13 @@ ignore =
     D412
     D105
     E133
-per-file-ignores = setup.py:E501
+per-file-ignores =
+    setup.py:E501
+    __init__.py:F401
 docstring-convention = numpy
 # normally I exclude init because it is very hard to configure init
 # without breaking many rules
-exclude = src/sampleproject/__init__.py
+# exclude = __init__.py
 
 # configuration for the isort module
 # https://github.com/timothycrosley/isort
