--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -20,8 +20,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r .ci/requirements_docs.txt
-          pip install -r .ci/requirements_release.txt
+          pip install -r .ci/requirements_docs.in
+          pip install -r .ci/requirements_release.in
 
       - name: Execute script to build our documentation and update pages
         run: "bash .ci/check_i18n.sh"
