--- a/tox.ini
+++ b/tox.ini
@@ -109,7 +109,7 @@ commands = safety check
 # we can tests bump2version with an actual commit
 setenv =
     COMMIT_MSG = Test commit message
-deps = -r{toxinidir}/.ci/requirements_release.txt
+deps = -r{toxinidir}/.ci/requirements_release.in
 
 skip_install = true
 commands =
@@ -122,7 +122,7 @@ commands =
 [testenv:docs]
 usedevelop = true
 deps =
-    -r{toxinidir}/.ci/requirements_docs.txt
+    -r{toxinidir}/.ci/requirements_docs.in
 setenv =
     current_version="test"
 commands =
@@ -142,11 +142,13 @@ ignore =
     D412
     D105
     E133
-per-file-ignores = setup.py:E501
+per-file-ignores =
+    setup.py:E501
+    __init__.py:F401
 docstring-convention = numpy
 # normally I exclude init because it is very hard to configure init
 # without breaking many rules
-exclude = src/sampleproject/__init__.py
+# exclude = __init__.py
 
 # configuration for the isort module
 # https://github.com/timothycrosley/isort
