--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,8 @@ version: 2
 updates:
   - package-ecosystem: "pip"
     # Look for a requirements.txt in the root directory
-    directory: "/"
-    # directory: "/.ci/dependabot/"
+    directory: "/.ci/dependabot/"
+    # directory: "/"
     schedule:
       interval: "daily"
 
