--- a/tox.ini
+++ b/tox.ini
@@ -109,7 +109,7 @@ commands = safety check
 # we can tests bump2version with an actual commit
 setenv =
     COMMIT_MSG = Test commit message
-deps = -r{toxinidir}/.ci/requirements_release.in
+deps = -r{toxinidir}/.ci/requirements_release.txt
 
 skip_install = true
 commands =
@@ -122,7 +122,7 @@ commands =
 [testenv:docs]
 usedevelop = true
 deps =
-    -r{toxinidir}/.ci/requirements_docs.in
+    -r{toxinidir}/.ci/requirements_docs.txt
 setenv =
     current_version="test"
 commands =
