--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r .ci/requirements_release.in
+          pip install -r .ci/requirements_release.txt
 
       - name: Generate base.pot
         run: pybabel extract -o locales/base.pot pidroidbot_discord/
@@ -177,6 +177,9 @@ jobs:
           cp CHANGELOG.md docs/_autogen/CHANGELOG.md
           github_changelog_generator --future-release "${NEW_VERSION}" --token "${{ secrets.GITHUB_TOKEN }}" --since-tag "$LAST_TAG" -o .ci/CHANGELOG.md
 
+      - name: Copy requirements for dependabot
+        run: cp requirements.txt .ci/dependabot/
+
       - name: Commit version and push
         env:
           BRANCH: ${{ env.BRANCH }}
@@ -225,7 +228,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r .ci/requirements_docs.in
+          pip install -r .ci/requirements_docs.txt
           export PYTHONPATH=..
 
       - name: Execute script to build our documentation and update pages
