--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -20,23 +20,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r .ci/requirements_docs.in
-          pip install -r .ci/requirements_release.in
+          pip install -r .ci/requirements_docs.txt
+          pip install -r .ci/requirements_release.txt
 
       - name: Execute script to build our documentation and update pages
         run: "bash .ci/check_i18n.sh"
-
-#      - name: Check i18n coverage
-#        id: i18nCoverage
-#        uses: alexkiro/i18n-coverage@v1.0.0
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          translations-path: 'locales/**/LC_MESSAGES/*.po'
-#
-#      - name: Check i18n coverage Documentation
-#        id: i18nCoverageDoc
-#        uses: alexkiro/i18n-coverage@v1.0.1
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
-
